# CCPP_forecast

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  streamlit.py
data/raw/: energy_production.csv
models/: LinearRegression.pkl
notebooks/: 01_reading_data.ipynb
